Actions
Bug #7686
closedloader: spelling fixes in comments.
Start date:
2016-12-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
No functional change, only spelling fixes.
FreeBSD change https://svnweb.freebsd.org/base?view=revision&revision=r298826
Updated by Electric Monk over 5 years ago
- Status changed from New to Closed
- % Done changed from 90 to 100
git commit 03502720e0c6f75cbaab12fa1ef2917fbc2eebd1
commit 03502720e0c6f75cbaab12fa1ef2917fbc2eebd1 Author: Toomas Soome <tsoome@me.com> Date: 2016-12-27T17:01:59.000Z 7686 loader: spelling fixes in comments. Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions